# sem3-TEP

./: README.md
laby1/: CMakeLists.txt  Constants.h  Ex1.cpp  Ex2-3.cpp  Ex4.cpp  Table.cpp  Table.h  main.cpp
laby2/: CMakeLists.txt  Number.cpp  Number.h  main.cpp
laby3/: CMakeLists.txt  ConsoleUserInterface.cpp  ConsoleUserInterface.h  Node.cpp  Node.h  Tree.cpp  Tree.h  main.cpp
laby4/: CMakeLists.txt  ConsoleUserInterface.cpp  ConsoleUserInterface.h  Error.cpp  Error.h  Node.cpp  Result.h  SaveResult.h  Tree.cpp  Tree.h  main.cpp
laby5/: CMakeLists.txt  Error.h  MySmartPointer.h  Node.cpp  RefCounter.h  Result.h  Tree.cpp  Tree.h  UniquePointer.h  main.cpp
mini_project/: CMakeLists.txt  GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GroupingChallenge.cpp  GroupingEvaluator.cpp  GroupingEvaluator.h  Individual.cpp  Individual.h  Optimizer.cpp  Optimizer.h  Point.cpp  Point.h  SimulationParams.h
